--- a/exercise_session_07/Makefile_assign
+++ b/exercise_session_07/Makefile_assign
@@ -1,14 +1,16 @@
-CXX	= g++
-CXXFLAGS += -I/usr/include/openmpi
-assign	: assign.o tipsy.o
-	$(CXX) -O3 -o assign assign.o tipsy.o -lfftw3f
+CXX = CC
+CXXFLAGS = -O3 -std=c++17 -fopenmp
+LDFLAGS = -lfftw3f -lfftw3f_omp -lm
+INC_DIR=/users/tsoydan/usr/local/include/
 
-assign.o : assign.cxx tipsy.h
-	$(CXX) -O3 -std=c++17 -c -o assign.o assign.cxx
+assign: assign.o tipsy.o
+	$(CXX) $(CXXFLAGS) -o assign assign.o tipsy.o $(LDFLAGS)
 
-tipsy.o : tipsy.cxx tipsy.h	
-	$(CXX) -O3 -std=c++17 -c -o tipsy.o tipsy.cxx
+assign.o: assign.cxx tipsy.h
+	$(CXX) $(CXXFLAGS) -I$(INC_DIR)  -c -o assign.o assign.cxx
+
+tipsy.o: tipsy.cxx tipsy.h
+	$(CXX) $(CXXFLAGS) -I$(INC_DIR)  -c -o tipsy.o tipsy.cxx
 
 clean:
 	rm -f assign assign.o tipsy.o
-
